# monti

./: .gitignore  CMakeLists.txt  README.md  _temp_glb_inspect.py  imgui.ini  run_coverage.ps1  run_coverage.py  test_output.txt
.github/: copilot-instructions.md
ai/: adaptive_sampling_plan.md  app_specification.md  camera_path_recording_spec.md  code_review_remediation_plan.md  datagen_performance_plan.md  directory_reorganization_plan.md  dof_plan.md  envmap_background_plan.md  executive_overview.md  ml_denoiser_discussion.md  ml_denoiser_plan.md  monti_design_spec.md  monti_implementation_plan.md  monti_implementation_plan_completed.md  prune_dark_viewpoints_plan.md  remove_static_denoiser.md  renderer_design_v5.md  roadmap.md  safetensors_conversion_plan.md  scene_lighting_fixes_plan.md  skip_safetensor_intermediate_stage.md  temporal_denoiser_plan.md  temporal_denoiser_superres_plan.md  temporal_model_improvement_plan.md  training_viewpoints_and_background_plan.md
ai/completed/: adaptive_sampling_plan.md  auto_exposure_plan.md  background_gbuffer_plan.md  datagen_performance_plan.md  monti_implementation_plan.md  prune_dark_viewpoints_plan.md  renderer_nan_bug_fix.md  safetensors_conversion_plan.md  temporal_denoiser_plan.md  training_viewpoints_and_background_plan.md
app/core/: AutoExposure.cpp  AutoExposure.h  CameraSetup.h  EnvironmentLoader.cpp  EnvironmentLoader.h  GBufferImages.cpp  GBufferImages.h  ToneMapper.cpp  ToneMapper.h  frame_resources.cpp  frame_resources.h  gbuffer_images.cpp  gbuffer_images.h  vulkan_context.cpp  vulkan_context.h
app/datagen/: CameraSetup.h  GenerationSession.cpp  GenerationSession.h  main.cpp
app/shaders/: luminance.comp  luminance_resolve.comp  tonemap.comp
app/view/: CameraController.cpp  CameraController.h  Panels.cpp  Panels.h  UiRenderer.cpp  UiRenderer.h  main.cpp  swapchain.cpp  swapchain.h
capture/shaders/: accumulate.comp  convergence_check.comp  finalize.comp  variance_update.comp
capture/src/: GpuAccumulator.cpp  GpuReadback.cpp  Luminance.cpp  Writer.cpp
cmake/: FetchDependencies.cmake
denoise/models/: deni_v1.denimodel  deni_v3.denimodel
scene/src/: Scene.cpp
scenes/: patch_bistro_glass.py
scenes/debug/: DiffuseTransmission.glb  NoMaterial.glb  NoNormals.glb  SpecGlossGlass.gltf  _analyze_scenes.py  _compare_scales.py  generate_test_scenes.py  grey_furnace.gltf  metal_roughness_ladder.gltf  mirror_sphere.gltf  roughness_ladder.gltf  uniform_grey.exr  uniform_grey.hdr  uniform_white.exr  uniform_white.hdr  white_furnace.gltf
shaders/: anyhit.rahit  closesthit.rchit  miss.rmiss  raygen.rgen
shaders/include/: bluenoise.glsl  brdf.glsl  clearcoat.glsl  common.glsl  constants.glsl  frame_uniforms.glsl  light_sampling.glsl  lights.glsl  mis.glsl  payload.glsl  sampling.glsl  sheen.glsl  uv_transform.glsl  vertex.glsl
test_output/datagen_review/: frame_000000_input.exr  frame_000000_target.exr
test_output/ml_denoiser_integration/: test_model.denimodel
tests/: README.md  adaptive_sampling_test.cpp  auto_exposure_test.cpp  background_gbuffer_test.cpp  capture_writer_test.cpp  datagen_path_order_test.cpp  datagen_session_e2e_test.cpp  deni_passthrough_test.cpp  extended_scene_test.cpp  generate_dds_test_data.py  generate_golden_reference.py  generate_test_assets.py  geometry_manager_test.cpp  gltf_loader_test.cpp  golden_test.cpp  gpu_scene_test.cpp  luminance_test.cpp  main_test.cpp  ml_denoiser_integration_test.cpp  ml_e2e_quality_test.cpp  ml_inference_numerical_test.cpp  ml_inference_test.cpp  ml_weight_loader_test.cpp  nan_regression_test.cpp  phase10a_test.cpp  phase11b_test.cpp  phase7a_test.cpp  phase7b_test.cpp  phase7c_test.cpp  phase8b_test.cpp  phase8c_test.cpp  phase8d_test.cpp  phase8e_test.cpp  phase8f_test.cpp  phase8g_test.cpp  phase8h_test.cpp  phase8i_test.cpp  phase8j_test.cpp  phase8k_test.cpp  phase8l_test.cpp  (+9 more)
tests/output/: README.md
training/: .gitignore  README.md  imgui.ini  pyproject.toml  requirements.txt
training/configs/: default.yaml  small_test.yaml  smoke_test.yaml  temporal.yaml
training/deni_train/: evaluate.py  evaluate_temporal.py  train.py  train_temporal.py
training/deni_train/data/: __init__.py  exr_dataset.py  safetensors_dataset.py  splits.py  temporal_safetensors_dataset.py  transforms.py
training/deni_train/losses/: denoiser_loss.py
training/deni_train/models/: blocks.py  unet.py
training/deni_train/utils/: metrics.py  reproject.py  tonemapping.py
training/scripts/: clean_training_run.py  compare_denoisers.py  convert_to_safetensors.py  diagnose_eval.py  download_hdris.py  download_scenes.py  export_cornell_box.py  export_weights.py  generate_light_rigs.py  generate_reference_output.py  generate_synthetic_data.py  generate_training_data.ps1  generate_training_data.py  generate_training_data.py.bak  generate_viewpoints.py  prepare_temporal.py  preprocess_temporal.py  probe_model.py  prune_viewpoints.py  remove_invalid_viewpoints.py  run_training_pipeline.py  validate_dataset.py
training/tests/: test_aces_dead_gradient.py  test_convert_to_safetensors.py  test_dataset.py  test_depthwise_block.py  test_download_hdris.py  test_evaluate_safetensors.py  test_export.py  test_exposure_wedge.py  test_generate_light_rigs.py  test_generate_training_data.py  test_loss_no_mask.py  test_model.py  test_prune_viewpoints.py  test_remove_invalid_viewpoints.py  test_safetensors_dataset.py  test_splits.py  test_temporal_model.py  test_temporal_reproject.py  test_temporal_training.py  test_train_safetensors.py  test_transforms.py  test_validate_safetensors.py  test_viewpoints.py
training/viewpoints/: cornell_box.json  damaged_helmet.json  dragon_attenuation.json
training/viewpoints/manual/: ABeautifulGame.json  AbandonedWarehouse.json  AntiqueCamera.json  BistroInterior.json  BoomBox.json  Brutalism.json  ClearCoatTest.json  DamagedHelmet.json  DragonAttenuation.json  FlightHelmet.json  GlassHurricaneCandleHolder.json  MaterialsVariantsShoe.json  MosquitoInAmber.json  SheenChair.json  ToyCar.json  WaterBottle.json  cornell_box.json  lantern.json  sponza.json
(+86 files in other folders)
